Fix review margin on mobile

--- a/src/scss/layout/_home.scss
+++ b/src/scss/layout/_home.scss
@@ -175,7 +175,8 @@
   }
 
   @include mqNavbar {
-    margin-top: 2rem;
+    margin-top: 3rem;
+    margin-bottom: 1rem;
   }
 
   @include mqXXLarge {
